--- a/prework-study-guide/index.html
+++ b/prework-study-guide/index.html
@@ -13,6 +13,35 @@
     </header>
     <main>
       <!-- Student code goes here -->
+      <section class="card" id="html-section">
+        <h2>HTML</h2>
+        <ul>
+          <li>HTML stands for : Hypertext Markup Language. It is a language that describes the general structure
+            of an HTML webpage
+          </li>
+          <li>The head element contains information about the webpage</li>
+          <li>The body element represents visible content shown to the user</li>
+          <li>There are 3 things that comprise of a general webpage: HTML, CSS, and JavaScript.</li>
+        </ul>
+      </section>
+      <section class="card" id="css-section"></section>
+        <h2>CSS</h2>
+        <ul>
+          <li>Notes on CSS 1</li>
+          <li>notes on CSS 2</li>
+        </ul>
+      <section class="card" id="git-section"></section>
+        <h2>Git</h2>
+        <ul>
+          <li>Notes on Git 1</li>
+          <li>notes on Git 2</li>
+        </ul>
+      <section class="card" id="javascript"></section>
+        <h2>JavaScript</h2>
+        <ul>
+          <li>Notes on JavaScript 1</li>
+          <li>notes on JavaScript 2</li>
+        </ul>
     </main>
 
     <footer>
