--- a/prework-study-guide/index.html
+++ b/prework-study-guide/index.html
@@ -4,16 +4,19 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="./assets/style.css">
     <title>Prework Study Guide</title>
   </head>
   <body>
     <header id="top">
       <h1>Prework Study Guide</h1>
+      <h2>This is the header h2</h2>
       <img src="./assets/bowtie-cat.png" alt="Profile image of cat wearing a bow tie." />
     </header>
     <main>
       <!-- Student code goes here -->
       <section class="card" id="html-section">
+        <h1>This is the body H1</h1>
         <h2>HTML</h2>
         <ul>
           <li>HTML stands for : Hypertext Markup Language. It is a language that describes the general structure
@@ -22,28 +25,31 @@
           <li>The head element contains information about the webpage</li>
           <li>The body element represents visible content shown to the user</li>
           <li>There are 3 things that comprise of a general webpage: HTML, CSS, and JavaScript.</li>
+          <li>in a section, the section reference name is denoted by class=[name]</li>
         </ul>
       </section>
-      <section class="card" id="css-section"></section>
+      <section class="card" id="css-section">
         <h2>CSS</h2>
         <ul>
-          <li>Notes on CSS 1</li>
-          <li>notes on CSS 2</li>
+          <li>A margin indicates how much space we want around the outside of an element.</li>
+          <li>A padding indicates how much space we want around the content inside an element.</li>
         </ul>
-      <section class="card" id="git-section"></section>
+      </section>  
+      <section class="card" id="git-section">
         <h2>Git</h2>
         <ul>
           <li>Notes on Git 1</li>
           <li>notes on Git 2</li>
         </ul>
-      <section class="card" id="javascript"></section>
+      </section>
+      <section class="card" id="javascript">
         <h2>JavaScript</h2>
         <ul>
           <li>Notes on JavaScript 1</li>
           <li>notes on JavaScript 2</li>
         </ul>
+      </section>
     </main>
-
     <footer>
       <p>I can code!</p>
     </footer>
