--- a/prework-study-guide/index.html
+++ b/prework-study-guide/index.html
@@ -12,6 +12,7 @@
       <h1>Prework Study Guide</h1>
       <h2>This is the header h2</h2>
       <img src="./assets/bowtie-cat.png" alt="Profile image of cat wearing a bow tie." />
+      <h2>Open the Console to See What's Happening</h2>
     </header>
     <main>
       <!-- Student code goes here -->
@@ -53,5 +54,6 @@
     <footer>
       <p>I can code!</p>
     </footer>
+    <script src="./assets/script.js"></script>
   </body>
 </html>
