A random topic is selected

--- a/prework-study-guide/index.html
+++ b/prework-study-guide/index.html
@@ -10,14 +10,12 @@
   <body>
     <header id="top">
       <h1>Prework Study Guide</h1>
-      <h2>This is the header h2</h2>
       <img src="./assets/bowtie-cat.png" alt="Profile image of cat wearing a bow tie." />
-      <h2>Open the Console to See What's Happening</h2>
+      <h2>&#10024 Open the Console to See What's Happening &#10024 </h2>
     </header>
     <main>
       <!-- Student code goes here -->
       <section class="card" id="html-section">
-        <h1>This is the body H1</h1>
         <h2>HTML</h2>
         <ul>
           <li>HTML stands for : Hypertext Markup Language. It is a language that describes the general structure
